--- a/package.json
+++ b/package.json
@@ -17,14 +17,17 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@types/node": "^24.7.1",
     "@types/qrcode": "^1.5.5",
     "@types/react": "^19.2.0",
     "@types/react-dom": "^19.2.0",
     "@vitejs/plugin-react": "^5.0.4",
     "axios": "^1.12.2",
     "dotenv": "^17.2.3",
+    "firebase": "^12.4.0",
     "framer-motion": "^12.23.22",
     "lucide-react": "^0.544.0",
+    "nanoid": "^5.1.6",
     "qrcode": "^1.5.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
