--- a/.env.local
+++ b/.env.local
@@ -5,7 +5,8 @@ VITE_WHATSAPP_ACCESS_TOKEN=EAFgCn2WnS8sBPgz4uNZAPkuDF1b1sLDIHbySZAyg2ZCZCcNZBJfS
 VITE_WHATSAPP_PHONE_NUMBER_ID=158282837372377
 VITE_WHATSAPP_BUSINESS_ACCOUNT_ID=164297206767745
 
-# Business WhatsApp Number for QR Code (Customer contacts this number)
+# Business WhatsApp Number (customers send messages TO this number)
+# This is where customers will contact your business
 VITE_WHATSAPP_BUSINESS_NUMBER=15550617327
 
 # API Configuration
